# tt05-synth-rp2040

./: CMakeLists.txt  LICENSE  README.md  demo-tune-commands.txt  main.cpp  tt_pins.h  tt_setup.c
julia/: demo-tune.jl  player.jl  tracks.jl  try_tracks.jl  tt05-synth-serial.jl
